test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_if_expr.draco
proc main() void : 

  a := if a1 then a2 elif a3 then a4 elif a5 then a6 else a7 fi;

corp;

